<!--
  Copyright 2014 Soichiro Kashima

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">APC-Demos</string>
    <string name="activity_title_default">Default style</string>
    <string name="activity_title_custom">Custom style</string>
    <string name="activity_title_emphasized_current">Emphasize current indicator</string>
    <string name="activity_title_custom_shape">Custom shape</string>
    <string name="activity_title_about">About this app</string>

    <string name="label_enable_click">Enable click</string>
    <string name="label_disable_click">Disable click</string>

    <string name="menu_about">@string/activity_title_about</string>

    <string name="msg_version">Version</string>
    <string name="msg_copyright">© 2014 Soichiro Kashima All rights reserved.</string>
    <string name="msg_about_description">Demo app for Android-PageControl.</string>
    <string name="msg_about_fork_me_on_github">Fork me on GitHub!</string>
    <string name="msg_about_github_url">https://github.com/ksoichiro/Android-PageControl</string>
    <string name="msg_about_lib_description">PageControl for Android apps.</string>

</resources>
